preventing my face from being squished

--- a/style.css
+++ b/style.css
@@ -138,7 +138,7 @@ h3 {
   }
   .avatar {
     width: 50%;
-    
+    height:auto;
   }
   .contacts li{
   width: 15px;
